syntax = "proto3";

package minitoolstream;

option go_package = "github.com/moroshma/MiniToolStreamConnector/model;minitoolstream_connector";

service IngressService {
  rpc Publish(PublishRequest) returns (PublishResponse);
}

message PublishRequest {
  string subject = 1;
  bytes data = 2;
  map<string, string> headers = 3;
}

message PublishResponse {
  uint64 sequence = 1;
  string object_name = 2;
  int64 status_code = 3;
  string error_message = 4;
}
